[package]
name = "iced-charts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["macros", "fs"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "tokio",
    "wgpu",
    "canvas",
    "advanced",
] }
